@@ -63,5 +63,6 @@
 
 struct tm *OPENSSL_gmtime(const time_t *timer, struct tm *result);
 int OPENSSL_gmtime_adj(struct tm *tm, int offset_day, long offset_sec);
+int OPENSSL_gmtime_diff(struct tm *from, struct tm *to, int *pday, int *psec);
 
 #endif
